terraform/modules/vpc/security.tf


resource "aws_security_group" "public" {
  name        = "test-public-sg"
  description = "Allow ALB TLS inbound traffic"
  vpc_id      = aws_vpc.head.id

  ingress {
    description      = "TLS from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = [aws_vpc.head.cidr_block]
  
  }

  ingress {
    description      = "http access"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "test-public-sg"
    ManagedBy = "terraform"
  }

}
